<resources>
    <!-- App Name Strings -->
    <string name="app_name">MeloDroid</string>

    <!-- Titles -->
    <string name="title_activity_open_gles20">OpenGLES20Activity</string>
    <string name="title_memory_game">Memory Game</string>
    <string name="title_activity_contact_management">Contact Management</string>

    <!-- Menu Strings -->
    <string name="action_settings">Settings</string>
    <string name="action_get_all_users">Log All User Data</string>
    <string name="action_contact_management">Manage Contacts</string>
    <string name="action_memory_game">Memory Game</string>
    <string name="action_sync_contacts">Sync Your Contacts</string>
    <string name="action_check_tables">Check Tables</string>
    <string name="action_add_table">Add User Table</string>
    <string name="action_drop_table">Delete User Table</string>
    <string name="action_logout">Log Out</string>
    <string name="action_draw_gl">OpenGL Demo</string>
    <string name="action_memory">Memory Game</string>
    <string name="action_database">Database</string>
    <string name="action_graphics">Graphics</string>

    <!-- Activity Strings -->
    <string name="home_screen_welcome">Welcome to MeloDroid!
        \nThis is a demonstration app created by Marek Kozina, started September, 2015.
        \nIt is a continuous work in progress.\n
        \nThanks for visiting!
        \n-Melosz</string>
    <string name="melodroid">MeloDroid</string>
    <string name="memory">Memory</string>
    <string name="contact_management">Contact Management</string>

    <!-- User Management Activity -->
    <string name="message_no_contacts">No contacts found.</string>
    <string name="action_remove_contact">Delete User</string>
    <string name="action_edit_contact">Edit Contact</string>
    <string name="action_add_contact">Add New contact</string>

    <!-- Memory Game Activity -->
    <string name="memory_new_game">New Game</string>
    <string name="high_score_label">High: </string>
    <string name="current_score_label">Current: </string>

    <!-- MyActivity - LoginScreen -->
    <string name="login_screen_fragment">Login</string>
    <string name="signup_screen_fragment">Sign up</string>
    <string name="forgot_pw">Forgot Password?</string>
    <string name="logon_no_match">The username and password were not a match. Please try again.</string>

    <!-- MyActivity - Registration Fragment-->
    <string name="registration_screen_fragment">Registration Fragment</string>
    <string name="sign_in_button">Submit</string>
    <string name="title_activity_home_screen">Home Screen</string>
    <string name="clear_fields">Clear All</string>
    <string name="helper_text_username">Username must be between 4 and 16 Characters</string>
    <string name="helper_text_password">Password must be between 6 and 24 Characters</string>
    <string name="helper_text_password2">Passwords must match</string>
    <string name="helper_text_email">Enter a valid email address</string>
    <string name="helper_text_zip">Your home zip code</string>
    <string name="helper_text_phone">Enter a valid phone number (10 digit minimum)</string>

    <!-- Misc Strings -->
    <string name="exit_dialogue">Are you sure you want to exit?</string>
    <string name="logoff_dialogue">Are you sure you want to logoff?</string>
    <string name="logoff_title">Log Off MeloDroid</string>
    <string name="sync_now">Sync Contacts</string>

    <!-- AppUser input field strings -->
    <string name="username_field">Username</string>
    <string name="password_field">Password</string>
    <string name="password_2_field">Re-enter Password</string>
    <string name="firstname_field">First Name</string>
    <string name="lastname_field">Last Name</string>
    <string name="email_field">Email Address</string>
    <string name="phone_field">Phone Number</string>
    <string name="address_field">Address</string>
    <string name="address2_field">Address Line 2 (Apt, Ste, etc.)</string>
    <string name="city_field">City</string>
    <string name="state_field">State</string>
    <string name="zip_field">5 Digit Zip Code</string>

    <!-- EditContactFragment Strings -->
    <string name="contact_first_name">First Name</string>
    <string name="contact_middle_name">Middle Name</string>
    <string name="contact_last_name">Last Name</string>
    <string name="contact_street_address">Street Address</string>
    <string name="contact_city">City</string>
    <string name="contact_state">State/Region</string>
    <string name="contact_zip">Zip</string>

    <!-- Toast Strings -->
    <string name="welcome_login_toast">Successfully Logged in as: </string>
    <string name="welcome_back_toast">Welcome back </string>
    <string name="welcome_registered_toast">Registration successful - welcome!</string>

    <!-- Preference Strings -->
    <string name="preference_file_key">com.kozina.marek.PREFERENCES_KEY</string>
    <string name="preference_stored_user">userName</string>
    <string name="preference_stored_user_id">userID</string>
    <string name="memory_high_score">highScore</string>
    <string name="memory_user_high_score">userHighScore</string>

</resources>
