<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/registration_screen_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="fragments.RegistrationFragment" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@android:drawable/screen_background_light"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="30dp"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <ImageView
                android:id="@+id/logo_image"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="15dp"
                android:background="@mipmap/meto_card_test"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:id="@+id/helper_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:includeFontPadding="false"
                android:layout_marginTop="-7dp"
                android:textColor="#5486aa"
                android:alpha=".75"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:id="@+id/username_field_reg"
                android:inputType="textPersonName"
                android:hint="@string/username_field"
                android:maxLength="16"
                android:textColorHint="@color/edit_text_hint"
                android:background="@drawable/bottom_border_selector"
                android:gravity="center_vertical|start"
                android:paddingLeft="@dimen/activity_half_margin"
                android:paddingRight="@dimen/activity_half_margin"
                android:textColor="@color/app_main" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:id="@+id/password_field_reg"
                android:inputType="textPassword"
                android:hint="@string/password_field"
                android:maxLength="24"
                android:textColorHint="@color/edit_text_hint"
                android:background="@drawable/bottom_border_selector"
                android:gravity="center_vertical|start"
                android:paddingLeft="@dimen/activity_half_margin"
                android:paddingRight="@dimen/activity_half_margin"
                android:layout_marginTop="10dp"
                android:textColor="@color/app_main" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:id="@+id/password_field_reg_reenter"
                android:inputType="textPassword"
                android:hint="@string/password_2_field"
                android:maxLength="24"
                android:textColorHint="@color/edit_text_hint"
                android:background="@drawable/bottom_border_selector"
                android:gravity="center_vertical|start"
                android:paddingLeft="@dimen/activity_half_margin"
                android:paddingRight="@dimen/activity_half_margin"
                android:layout_marginTop="10dp"
                android:textColor="@color/app_main" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:id="@+id/email_field"
                android:inputType="textEmailAddress"
                android:hint="@string/email_field"
                android:maxLength="34"
                android:textColorHint="@color/edit_text_hint"
                android:background="@drawable/bottom_border_selector"
                android:gravity="center_vertical|start"
                android:paddingLeft="@dimen/activity_half_margin"
                android:paddingRight="@dimen/activity_half_margin"
                android:layout_marginTop="10dp"
                android:textColor="@color/app_main" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:id="@+id/zip_address_field"
                android:inputType="number"
                android:hint="@string/zip_field"
                android:maxLength="5"
                android:textColorHint="@color/edit_text_hint"
                android:background="@drawable/bottom_border_selector"
                android:gravity="center_vertical|start"
                android:paddingLeft="@dimen/activity_half_margin"
                android:paddingRight="@dimen/activity_half_margin"
                android:layout_marginTop="10dp"
                android:textColor="@color/app_main" />

            <com.dev.melosz.melodroid.classes.IMEListenerEditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:id="@+id/phone_number_field"
                android:inputType="phone"
                android:hint="@string/phone_field"
                android:maxLength="20"
                android:textColorHint="@color/edit_text_hint"
                android:background="@drawable/bottom_border_selector"
                android:gravity="center_vertical|start"
                android:paddingLeft="@dimen/activity_half_margin"
                android:paddingRight="@dimen/activity_half_margin"
                android:layout_marginTop="10dp"
                android:textColor="@color/app_main">
            </com.dev.melosz.melodroid.classes.IMEListenerEditText>

            <Button
                android:id="@+id/submit_button"
                android:text="@string/sign_in_button"
                android:textColor="@drawable/text_color_signup"
                android:textSize="30sp"
                android:textAllCaps="false"
                android:layout_width="150dp"
                android:layout_height="65dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:background="@android:drawable/btn_default"
                android:typeface="sans"
                style="@style/button_text"/>

            <TextView
                android:id="@+id/clear_all_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@drawable/link_text_color"
                android:text="@string/clear_fields"
                android:textStyle="bold"
                android:clickable="true"
                android:gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:paddingBottom="10dp"
                android:background="?android:selectableItemBackground"/>

        </LinearLayout>
    </ScrollView>

</LinearLayout>