<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/edit_contact_fragment"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    tools:context="com.dev.melosz.melodroid.fragments.EditContactFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <!-- This is wrapped in a Linear Layout to give it a small underlined divider -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/small_divider">

            <ImageButton
                android:id="@+id/close_edit_frag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/navigateup"
                android:background="?android:selectableItemBackground"
                android:layout_gravity="center_horizontal"/>

        </LinearLayout>

        <TextView
            android:id="@+id/helper_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:includeFontPadding="false" />

        <!-- Only display the password field initially -->
        <LinearLayout
            android:id="@+id/access_password_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/name_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="30dp"
                    android:id="@+id/password_field"
                    android:inputType="textPassword"
                    android:hint="@string/password_field"
                    android:maxLength="24"
                    android:textColorHint="#868686"
                    android:background="@drawable/bottom_border_selector"
                    android:gravity="center_vertical|start"
                    android:paddingLeft="@dimen/activity_half_margin"
                    android:paddingRight="@dimen/activity_half_margin"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/app_main"/>

                <TextView
                    android:id="@+id/submit_edit_password"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="16sp"
                    android:textColor="@drawable/link_text_color"
                    android:text="Submit"
                    android:textStyle="bold"
                    android:clickable="true"
                    android:gravity="center"
                    android:paddingRight="5dp"
                    android:paddingLeft="5dp"
                    android:background="?android:selectableItemBackground"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/access_edit_fields"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:id="@+id/contact_phone"
                android:inputType="phone"
                android:hint="@string/phone_field"
                android:textColorHint="#898989"
                android:background="@drawable/bottom_border_selector"
                android:gravity="center_vertical|start"
                android:paddingLeft="@dimen/activity_half_margin"
                android:paddingRight="@dimen/activity_half_margin"
                android:layout_marginTop="10dp"
                android:textColor="@color/app_main">
            </EditText>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:id="@+id/contact_first_name"
                android:inputType="textPersonName"
                android:hint="@string/contact_first_name"
                android:maxLength="40"
                android:textColorHint="#898989"
                android:background="@drawable/bottom_border_selector"
                android:gravity="center_vertical|start"
                android:paddingLeft="@dimen/activity_half_margin"
                android:paddingRight="@dimen/activity_half_margin"
                android:layout_marginTop="10dp"
                android:textColor="@color/app_main" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:id="@+id/contact_middle_name"
                android:inputType="textPersonName"
                android:hint="@string/contact_middle_name"
                android:maxLength="40"
                android:textColorHint="#898989"
                android:background="@drawable/bottom_border_selector"
                android:gravity="center_vertical|start"
                android:paddingLeft="@dimen/activity_half_margin"
                android:paddingRight="@dimen/activity_half_margin"
                android:layout_marginTop="10dp"
                android:textColor="@color/app_main" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:id="@+id/contact_last_name"
                android:inputType="textPersonName"
                android:hint="@string/contact_last_name"
                android:maxLength="40"
                android:textColorHint="#898989"
                android:background="@drawable/bottom_border_selector"
                android:gravity="center_vertical|start"
                android:paddingLeft="@dimen/activity_half_margin"
                android:paddingRight="@dimen/activity_half_margin"
                android:layout_marginTop="10dp"
                android:textColor="@color/app_main" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:id="@+id/contact_email"
                android:inputType="textEmailAddress"
                android:hint="@string/email_field"
                android:textColorHint="#898989"
                android:background="@drawable/bottom_border_selector"
                android:gravity="center_vertical|start"
                android:paddingLeft="@dimen/activity_half_margin"
                android:paddingRight="@dimen/activity_half_margin"
                android:layout_marginTop="10dp"
                android:textColor="@color/app_main" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:id="@+id/contact_street_address"
                android:inputType="textPostalAddress"
                android:hint="@string/contact_street_address"
                android:textColorHint="#898989"
                android:background="@drawable/bottom_border_selector"
                android:gravity="center_vertical|start"
                android:paddingLeft="@dimen/activity_half_margin"
                android:paddingRight="@dimen/activity_half_margin"
                android:layout_marginTop="10dp"
                android:textColor="@color/app_main" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:id="@+id/contact_city"
                android:inputType="textCapWords"
                android:hint="@string/contact_city"
                android:textColorHint="#898989"
                android:background="@drawable/bottom_border_selector"
                android:gravity="center_vertical|start"
                android:paddingLeft="@dimen/activity_half_margin"
                android:paddingRight="@dimen/activity_half_margin"
                android:layout_marginTop="10dp"
                android:textColor="@color/app_main" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:id="@+id/contact_state"
                android:inputType="textCapWords"
                android:hint="@string/contact_state"
                android:textColorHint="#898989"
                android:background="@drawable/bottom_border_selector"
                android:gravity="center_vertical|start"
                android:paddingLeft="@dimen/activity_half_margin"
                android:paddingRight="@dimen/activity_half_margin"
                android:layout_marginTop="10dp"
                android:textColor="@color/app_main" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:id="@+id/contact_zip"
                android:inputType="number"
                android:hint="@string/zip_field"
                android:maxLength="5"
                android:textColorHint="#898989"
                android:background="@drawable/bottom_border_selector"
                android:gravity="center_vertical|start"
                android:paddingLeft="@dimen/activity_half_margin"
                android:paddingRight="@dimen/activity_half_margin"
                android:layout_marginTop="10dp"
                android:textColor="@color/app_main" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>
