<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_screen_frag"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="fragments.LoginScreen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@android:drawable/screen_background_light"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="30dp"
            android:orientation="vertical"
            android:gravity="center_horizontal" >

            <ImageView
                android:id="@+id/logo_image"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="15dp"
                android:background="@mipmap/meto_card_test"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:id="@+id/helper_tv_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:includeFontPadding="false"
                android:layout_marginTop="-7dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:id="@+id/username_field"
                android:hint="@string/username_field"
                android:maxLength="16"
                android:textColorHint="#898989"
                android:background="@drawable/bottom_border_selector"
                android:gravity="center_vertical|start"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:textColor="#36454b"
                android:inputType="textPersonName"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:id="@+id/password_field"
                android:inputType="textPassword"
                android:hint="@string/password_field"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:maxLength="24"
                android:textColorHint="#898989"
                android:background="@drawable/bottom_border_selector"
                android:gravity="center_vertical|start"
                android:layout_marginTop="10dp"
                android:textColor="#36454b"/>

            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal">
                <TextView
                    android:id="@+id/forgot_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@drawable/link_text_color"
                    android:text="@string/forgot_pw"
                    android:textStyle="bold"
                    android:clickable="true"
                    android:background="?android:selectableItemBackground"/>

            </LinearLayout>
            <Button
                android:id="@+id/signin_button"

                android:text="@string/sign_in_button"
                android:textColor="@drawable/text_color_signup"
                android:textSize="30sp"
                android:textAllCaps="false"
                android:layout_width="150dp"
                android:layout_height="65dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"

                android:background="@android:drawable/btn_default"
                android:typeface="sans"
                style="@style/button_text"/>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>