<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.dev.melosz.melodroid.activities.MemoryGameActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/app_main"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:background="@mipmap/ic_meto_launcher"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_gravity="center_vertical" />

            <!-- This LinearLayout wraps the TextView so the borders can be highlighted.  -->
            <LinearLayout
                android:id="@+id/tab_layout_wrapper"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:layout_gravity="center_horizontal|bottom">

                <com.dev.melosz.melodroid.views.BorderFrameLayout
                    android:id="@+id/title_container"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom">
                    <TextView
                        android:id="@+id/title_bar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/memory"
                        android:textColor="@color/title_bar_text"
                        android:textSize="@dimen/title_bar_text"
                        android:layout_marginRight="5dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginBottom="5dp"/>
                </com.dev.melosz.melodroid.views.BorderFrameLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:gravity="end"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/options_button"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:gravity="end"
                    android:background="@mipmap/list6"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_marginRight="5dp"
                    android:layout_marginEnd="5dp"/>
            </LinearLayout>
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#283337"
            android:layout_gravity="bottom"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000000"
            android:layout_gravity="bottom" />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#949494"
            android:layout_gravity="bottom" />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#dddddd"
            android:layout_gravity="bottom" />
    </LinearLayout>
    <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/card_grid_container"
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_weight="1"
                android:layout_margin="@dimen/activity_horizontal_margin"
                tools:context="com.dev.melosz.melodroid.activities.MemoryGameActivity"
                android:columnCount="4"
                android:rowCount="6"
                android:clipChildren="false">
    </GridLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"></LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="39dip"
        android:layout_weight="0"
        android:gravity="center|bottom"
        android:background="@color/overlay_grey">

        <TextView android:id="@+id/app_high"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/high_score_label"
            android:layout_gravity="center_horizontal|center_vertical"
            android:textColor="@color/title_bar_text"
            android:textSize="25sp"
            android:layout_marginRight="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"/>

        <TextView android:id="@+id/user_high"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current_score_label"
            android:layout_gravity="center_horizontal|center_vertical"
            android:textColor="@color/title_bar_text"
            android:textSize="25sp"
            android:layout_marginRight="25dp"
            android:layout_marginEnd="15dp"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"/>
    </LinearLayout>
</LinearLayout>